[package]
name = "terra_os_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"
volatile = "0.2"
spin = "0.5"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
rlibc = "1.0"
bit_field = "0.10"
bitflags = "2.0"

[dependencies.bootloader]
version = "0.9"
features = []


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


